--- a/src/styles/stepper.scss
+++ b/src/styles/stepper.scss
@@ -1,6 +1,132 @@
-$default: #6A7580;
+$default: #99a1a9;
+$current: #1467b5;
 $isActive: #064D90;
+$transition: all 500ms ease;
 
-body{
-    
+body {
+    background: #D3D7DC;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.main {
+    background: #FFFFFF;
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    width: 1370px;
+    height: 700px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+
+
+.stepper {
+    margin-top: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 80%;
+    z-index: 0;
+    position: relative;
+
+    &-progress {
+        position: absolute;
+        background-color: $default;
+        height: 2px;
+        width: 1095px;
+        z-index: -1;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+
+        &-bar {
+            position: absolute;
+            left: 0;
+            height: 100%;
+            width: 80%;
+            background-color: $isActive;
+            transition: $transition;
+        }
+    }
+
+}
+
+.stepper-item {
+    color: $default;
+    transition: $transition;
+
+    &-counter {
+        width: 25px;
+        height: 25px;
+        background-color: $default;
+        border-radius: 100%;
+
+    }
+}
+
+.stepper-item.success {
+    .stepper-item-counter {
+        background: $isActive;
+    }
+
+}
+
+.stepper-item.current {
+    .stepper-item-counter {
+        background: $current;
+    }
+}
+
+.form-container {
+    width: 100%;
+    height: 80%;
+    margin: 15px 0;
+}
+
+.controls {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 10px;
+    width: 80%;
+
+}
+
+.next-button {
+    background: #0094FF;
+    border: 1px solid #0094FF;
+    border-radius: 8px;
+    color: #FFFFFF;
+    padding: 10px 20px;
+}
+
+.back-button {
+    border: 1px solid #BABABA;
+    border-radius: 10px;
+    color: #000;
+    padding: 10px 20px;
+    background-color: #fff;
+}
+
+.next-button.disabled {
+    background: #75c0f6;
+    border: 1px solid #75c0f6;
+    border-radius: 8px;
+    color: #FFFFFF;
+    padding: 10px 20px;
+}
+
+.back-button.disabled {
+    border: 1px solid #BABABA;
+    border-radius: 10px;
+    color: #888;
+    padding: 10px 20px;
+    background-color: #fff;
 }
