--- a/src/styles/stepper.scss
+++ b/src/styles/stepper.scss
@@ -3,7 +3,7 @@ $current: #1467b5;
 $isActive: #064D90;
 $transition: all 500ms ease;
 
-body {
+.main-cv-container {
     background: #D3D7DC;
     width: 100%;
     height: 100vh;
@@ -12,12 +12,11 @@ body {
     justify-content: center;
 }
 
-.main {
+.stepper-container {
     background: #FFFFFF;
     box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     width: 1370px;
-    height: 700px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -85,8 +84,8 @@ body {
 
 .form-container {
     width: 100%;
-    height: 80%;
     margin: 15px 0;
+   
 }
 
 .controls {
@@ -96,6 +95,8 @@ body {
     align-items: center;
     gap: 10px;
     width: 80%;
+    margin: 25px 0;
+   
 
 }
 
@@ -105,6 +106,15 @@ body {
     border-radius: 8px;
     color: #FFFFFF;
     padding: 10px 20px;
+}
+
+.add-button {
+    background: #0094FF;
+    border: 1px solid #0094FF;
+    border-radius: 8px;
+    color: #FFFFFF;
+    padding: 10px 15px;
+    align-self: flex-start;
 }
 
 .back-button {
