--- a/src/styles/inputs.scss
+++ b/src/styles/inputs.scss
@@ -12,10 +12,27 @@
     align-self: flex-start;
     font-size: 15px;
 }
-
+.form-input-container-year label {
+    font-family: 'Inter', sans-serif;
+    align-self: flex-start;
+    font-size: 15px;
+    margin-right: 15px;
+}
 .form-input {
     width: 100%;
     height: 25px;
+    border-radius: 10px;
+    padding-left: 10px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+.form-input-container-year {
+ 
+    width: 100%;
+
+}
+.form-input-year {
+    height: 20px;
     border-radius: 10px;
     padding-left: 10px;
     padding-top: 3px;
