--- a/src/styles/labels.scss
+++ b/src/styles/labels.scss
@@ -3,6 +3,7 @@
     font-style: normal;
     font-size: 25px;
     color: #064D90;
-    margin: 0px;
+    margin-top: 3px;
+    margin-bottom: 10px;
     align-self: flex-start;
 }
