--- a/src/styles/stepper.scss
+++ b/src/styles/stepper.scss
@@ -84,7 +84,10 @@ $transition: all 500ms ease;
 
 .form-container {
     width: 100%;
+    height: 525px;
     margin: 15px 0;
+    padding: 15px 0;
+    align-self: center;
    
 }
 
@@ -107,7 +110,12 @@ $transition: all 500ms ease;
     color: #FFFFFF;
     padding: 10px 20px;
 }
-
+.add-button-container {
+    display: grid;
+    grid-template-columns: 10%;
+    grid-template-rows: 1fr;
+    width: 85%;
+}
 .add-button {
     background: #0094FF;
     border: 1px solid #0094FF;
@@ -115,6 +123,8 @@ $transition: all 500ms ease;
     color: #FFFFFF;
     padding: 10px 15px;
     align-self: flex-start;
+    width: 100%;
+    margin: 10px 0px;
 }
 
 .back-button {
