--- a/src/styles/stepper.scss
+++ b/src/styles/stepper.scss
@@ -38,7 +38,7 @@ $transition: all 500ms ease;
         position: absolute;
         background-color: $default;
         height: 2px;
-        width: 1095px;
+        width: 100%;
         z-index: -1;
         left: 0;
         right: 0;
