Min heigth to cv form container

--- a/src/styles/stepper.scss
+++ b/src/styles/stepper.scss
@@ -84,7 +84,7 @@ $transition: all 500ms ease;
 
 .form-container {
     width: 100%;
-    height: 525px;
+    min-height: 525px;
     margin: 15px 0;
     padding: 15px 0;
     align-self: center;
