--- a/src/styles/stepper.scss
+++ b/src/styles/stepper.scss
@@ -110,6 +110,11 @@ $transition: all 500ms ease;
     color: #FFFFFF;
     padding: 10px 20px;
 }
+
+.next-button:hover {
+    background: #0185e3;
+    border: 1px solid #0185e3;
+}
 .add-button-container {
     display: grid;
     grid-template-columns: 10%;
@@ -142,6 +147,10 @@ $transition: all 500ms ease;
     background-color: #fff;
 }
 
+.back-button:hover {
+    border: 1px solid #BABABA;
+    background-color: rgb(237, 236, 236);
+}
 .next-button.disabled {
     background: #75c0f6;
     border: 1px solid #75c0f6;
