Show mandatory fields

--- a/src/styles/labels.scss
+++ b/src/styles/labels.scss
@@ -7,3 +7,8 @@
     margin-bottom: 10px;
     align-self: flex-start;
 }
+.mandatory-field{
+    font-family: 'Inter', sans-serif;
+    align-self: flex-start;
+    font-size: 14px;
+}
